RBS.Email.Sender: Add basic structure (isAlive, models, senders without logic)

--- a/RBS.Email.Sender/RBS.Email.Sender.WebApi/RBS.Email.Sender.WebApi.csproj
+++ b/RBS.Email.Sender/RBS.Email.Sender.WebApi/RBS.Email.Sender.WebApi.csproj
@@ -7,10 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RBS.Email.Sender.Models\RBS.Email.Sender.Common.csproj" />
     <ProjectReference Include="..\RBS.Email.Sender.Services\RBS.Email.Sender.Services.csproj" />
   </ItemGroup>
 
