--- a/RBS.Email.Sender/RBS.Email.Sender.Services/RBS.Email.Sender.Services.csproj
+++ b/RBS.Email.Sender/RBS.Email.Sender.Services/RBS.Email.Sender.Services.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="MailKit" Version="3.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RBS.Email.Sender.Models\RBS.Email.Sender.Common.csproj" />
+  </ItemGroup>
+
 </Project>
