--- a/RBS.Email.Sender/RBS.Email.Sender.Models/RBS.Email.Sender.Common.csproj
+++ b/RBS.Email.Sender/RBS.Email.Sender.Models/RBS.Email.Sender.Common.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="RBS_Enums" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
