--- a/RBS.Email.Sender/RBS.Email.Sender.WebApi/appsettings.json
+++ b/RBS.Email.Sender/RBS.Email.Sender.WebApi/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "Email": "room-booking-system@outlook.com",
+    "Password": "none"
+  },
+  "MongoSettings": {
+    "ConncetionString": "none",
+    "DbName": "rbs_messaging",
+    "MessagesCollectionName": "rbs_messages"
+  }
 }
