--- a/RBS.Email.Sender/RBS.Email.Sender.WebApi/Properties/launchSettings.json
+++ b/RBS.Email.Sender/RBS.Email.Sender.WebApi/Properties/launchSettings.json
@@ -1,31 +1,37 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:4278",
-      "sslPort": 44304
+      "applicationUrl": "http://localhost:21120",
+      "sslPort": 44331
     }
   },
   "profiles": {
-    "RBS.Email.Sender.WebApi": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
+    "IIS Express": {
+      "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7015;http://localhost:5015",
+      "launchUrl": "isAlive",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "RBS.Auth.WebApi": {
+      "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "isAlive",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5003;http://localhost:5002"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/isAlive",
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
